--- a/future.tex
+++ b/future.tex
@@ -10,3 +10,6 @@ Mejorar dependendecias de clases
 \\
 
 Dependecia de variables o constantes seteadas, tanto para cobertura como para beapi
+\\
+Crear un algortimo genetico especifico para este caso
+\\
