--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -23,22 +23,22 @@
 \multicolumn{2}{|c|}{\textbf{BHeap}}& 0 & 0  &  0 &  0 &  0 &  0   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{Lits}} &   & 0.50  &   & \emph{0}  &   & 0   \\
+\multicolumn{2}{|c|}{\textbf{Lits}} &   & 0.50  &   & \cellcolor{gray!25}\emph{0.50}   &   & 0   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{Sched.}} &   & 0.75   &   &  0 &   & 0   \\
+\multicolumn{2}{|c|}{\textbf{Sched.}} &   & 0.75   &   &  0 &   & 0.5   \\
 
 \midrule
 \multicolumn{2}{|c|}{\textbf{LinkedList}} &  &  1.25 &   &  1 &  &  1.25  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeMap}} &   &   &   &   &   &     \\
+\multicolumn{2}{|c|}{\textbf{TreeMap}} &  1 & \cellcolor{gray!25}\emph{1.70}  &  1 &  \cellcolor{gray!25} \emph{0}  & 1 & \cellcolor{gray!25}\emph{1.5}   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeSet}} &   &   &   &   &   &    \\
+\multicolumn{2}{|c|}{\textbf{TreeSet}} &   &\cellcolor{gray!25} \emph{1.70}  &   &   \cellcolor{gray!25}\emph{0.5}  &  & \cellcolor{gray!25}\emph{1.5}   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{HashSet}} &   &   &   &   &   &    \\
+\multicolumn{2}{|c|}{\textbf{HashSet}} &   &0.5   &   &  0.5 &   &  0.5  \\
 \midrule
 
 \multicolumn{2}{|c|}{\textbf{HashMap}} &   &   &   &   &   &    \\
