--- a/tables/eficienciaBuilders.tex
+++ b/tables/eficienciaBuilders.tex
@@ -10,6 +10,7 @@
 \multicolumn{2}{|c|}{} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}} \\
 \midrule
 \multicolumn{2}{|c|}{\textbf{NCL}} & 300  & 4389   & 32 &  1251 &85 & 10370 \\
+ \multicolumn{2}{|c|}{\scriptsize \#API: 34}&   &   &   &   &   &      \\
 \midrule
 \multicolumn{2}{|c|}{\textbf{UFInd}}&   &   &   &   &   &      \\
 \midrule
@@ -32,13 +33,13 @@
 \multicolumn{2}{|c|}{\textbf{LinkedList}} &  &  2182 &   &  432 &  &  12698  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeMap}} &   &   &   &   &   &     \\
+\multicolumn{2}{|c|}{\textbf{TreeMap}} &   &  5162 &   & 691  &   &   6127  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeSet}} &   &   &   &   &   &    \\
+\multicolumn{2}{|c|}{\textbf{TreeSet}} &   & 3021  &   & 801  &   &  5421  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{HashSet}} &   &   &   &   &   &    \\
+\multicolumn{2}{|c|}{\textbf{HashSet}} &   &  570 &   &  3842 &   &   660 \\
 \midrule
 
 \multicolumn{2}{|c|}{\textbf{HashMap}} &   &   &   &   &   &    \\
