--- a/tables/tableJPFBuilders.tex
+++ b/tables/tableJPFBuilders.tex
@@ -83,6 +83,6 @@ Class & Method & Scope &
 
 \end{tabular}%
 \caption{Estados generados JPF utilizando el método driver con todos los métodos de la API vs. solo utilizando los métodos builders.}
-\label{tab:results1-jpf}
+\label{tab:results-jpf1}
  \end{table}
 
