--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
  % Add new own commands
 \newcommand{\cacho}{\textcolor{red}}
 \usepackage{colortbl}
+\newcommand{\hightlight}{\rowcolor[gray]{.95}}
 
 % Define el comando \cellcolorgray para aplicar sombreado a una celda
 \newcommand{\cellcolorgray}{\cellcolor{gray!25}}%Indice
