--- a/main.tex
+++ b/main.tex
@@ -52,6 +52,8 @@
 % \titleformat{\chapter}[display]
 %   {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{}{}
   \titleformat{\chapter}[display]{\normalfont\Huge\bfseries}{\chaptertitlename\ \thechapter.}{0.42em}{}
+  \titleformat{\section}{\bfseries}{\thesection}{1em}{}
+
 \titleformat{\subsection}{\bfseries}{\thesubsection}{1em}{}
 
 \titlespacing{\chapter}{0pt}{0pt}{4pt}
