--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -9,9 +9,9 @@
 \multicolumn{2}{|c|}{} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}} & \multicolumn{2}{c|}{\textbf{SubSet}} \\
 \multicolumn{2}{|c|}{} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{NCL}} & 0  &  1 & 0 &  0.75 &0 &  1.33 \\
+\multicolumn{2}{|c|}{\textbf{NCL}} & 0.80  &  1 & 0 &  0.60 &0 &  0.60 \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{UFInd}}&   &   &   &   &   &      \\
+\multicolumn{2}{|c|}{\textbf{UFInd}}& 0.40 & 0  & 0  & 0  &0   & 0     \\
 \midrule
 
 \multicolumn{2}{|c|}{\textbf{FHeap}}& 0 & 0  &  0 &  0 &  0 &  0   \\
@@ -23,25 +23,25 @@
 \multicolumn{2}{|c|}{\textbf{BHeap}}& 0 & 0  &  0 &  0 &  0 &  0   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{Lits}} &   & 0.50  &   & \cellcolor{gray!25}\emph{0.50}   &   & 0   \\
+\multicolumn{2}{|c|}{\textbf{Lits}} &  1 &  & 1 &  0  & 1  &   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{Sched.}} &   & 0.75   &   &  0 &   & 0.5   \\
+\multicolumn{2}{|c|}{\textbf{Sched.}} &  0 & 0   & 0  &  0 &  0 & 0 \\
 
 \midrule
-\multicolumn{2}{|c|}{\textbf{LinkedList}} &  &  1.25 &   &  1 &  &  1.25  \\
+\multicolumn{2}{|c|}{\textbf{LinkedList}} & 0 &  1.20 &  0 &  1 &0  &  1.20  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeMap}} &  1 & \cellcolor{gray!25}\emph{1.70}  &  1 &  \cellcolor{gray!25} \emph{0}  & 1 & \cellcolor{gray!25}\emph{1.5}   \\
+\multicolumn{2}{|c|}{\textbf{TreeMap}} &  0 & \cellcolor{gray!25}\emph{2.40}  &  0 &  \cellcolor{gray!25} \emph{1}  &0 & \cellcolor{gray!25}\emph{2}   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeSet}} &   &\cellcolor{gray!25} \emph{1.70}  &   &   \cellcolor{gray!25}\emph{0.5}  &  & \cellcolor{gray!25}\emph{1.5}   \\
+\multicolumn{2}{|c|}{\textbf{TreeSet}} &  0&\cellcolor{gray!25} \emph{1.80}  &  0 &   \cellcolor{gray!25}\emph{1    }  & 0 & \cellcolor{gray!25}\emph{1}   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{HashSet}} &   &0.5   &   &  0.5 &   &  0.5  \\
+\multicolumn{2}{|c|}{\textbf{HashSet}} &  1 &1  &  1 &  1& 1  &  1  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{HashMap}} &   &   &   &   &   &    \\
+\multicolumn{2}{|c|}{\textbf{HashMap}} & 0.40  &   &0   &   &  0 &    \\
 \hline
 \end{tabular}
 
