--- a/tables/eficienciaBuilders.tex
+++ b/tables/eficienciaBuilders.tex
@@ -9,40 +9,40 @@
 \multicolumn{2}{|c|}{} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}} & \multicolumn{2}{c|}{\textbf{SubSet}} \\
 \multicolumn{2}{|c|}{} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}} \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{NCL}} & 300  & 4389   & 32 &  1251 &85 & 10370 \\
+\multicolumn{2}{|c|}{\textbf{NCL}} & 374  & 4389   & 67 &  1251 &85 & 10370 \\
  \multicolumn{2}{|c|}{\scriptsize \#API: 34}&   &   &   &   &   &      \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{UFInd}}&   &   &   &   &   &      \\
+\multicolumn{2}{|c|}{\textbf{UFInd}}& 94  & 934  &  27 &381   & 32  &  301    \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{FHeap}} &   & 462  &   &321   &   &  482   \\
+\multicolumn{2}{|c|}{\textbf{FHeap}} & 11  & 462  & 6  &321   &  6 &  482   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{BTree}} &   &  232 &   & 240   &   & 240   \\
+\multicolumn{2}{|c|}{\textbf{BTree}} &  5 &  232 & 2  & 240   &  2 & 240   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{BHeap}} &   &  1319 &   & 390  &   &  776   \\
+\multicolumn{2}{|c|}{\textbf{BHeap}} & 31 &  1319 & 10 & 390  & 10 &  776   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{Lits}} &   & 4572  &   &  \emph{764} &   & 5642   \\
+\multicolumn{2}{|c|}{\textbf{Lits}} & 32  & 4572  & 11  &  563 & 16  & 5642   \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{Sched.}} &   & 2247  &   & 374  &   &1083    \\
+\multicolumn{2}{|c|}{\textbf{Sched.}} &   94& 2247  & 24  & 374  & 86  &1083    \\
 
 \midrule
-\multicolumn{2}{|c|}{\textbf{LinkedList}} &  &  2182 &   &  432 &  &  12698  \\
+\multicolumn{2}{|c|}{\textbf{LinkedList}} & 89 &  2182 &  13 &  432 & 15 &  12698  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeMap}} &   &  5162 &   & 691  &   &   6127  \\
+\multicolumn{2}{|c|}{\textbf{TreeMap}} & 1248  &  5162 &  113 & 691  &   &   6127  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeSet}} &   & 3021  &   & 801  &   &  5421  \\
+\multicolumn{2}{|c|}{\textbf{TreeSet}} &  96 & 3021  &  11 & 801  &  13 &  5421  \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{HashSet}} &   &  570 &   &  3842 &   &   660 \\
+\multicolumn{2}{|c|}{\textbf{HashSet}} &  148 &  570 & 20  &  3842 &  39 &   660 \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{HashMap}} &   &   &   &   &   &    \\
+\multicolumn{2}{|c|}{\textbf{HashMap}} &  1803 &   &  85 &   &   9340&    \\
 \hline
 \end{tabular}
 
