--- a/evaluacion.tex
+++ b/evaluacion.tex
@@ -21,9 +21,9 @@ En este capítulo, realizamos una evaluación experimental de estas técnicas co
 \cacho{TODO: pensar mejor las RQ}
 \begin{itemize}
 \item \emph{RQ1}: ¿Qué tan eficientes son los algoritmos (Algoritmo Genético, Greedy, Clases de Equivalencia) para identificar conjuntos de métodos suficientes? 
-\item \emph{RQ2}: ¿Qué tan efectivos son los algoritmos presntados para identificar conjuntos de métodos \emph{builders} suficientes de cada API?
+\item \emph{RQ2}: ¿Qué tan efectivos son los algoritmos presentados para identificar conjuntos de métodos \emph{builders} suficientes de cada API?
 \emph{builders} y cuánto tiempo computacional requiere cada enfoque?
-\item \emph{RQ3}: ¿Cuál es el impacto de utilizar métodos Builders identificados en comparación con el uso de todos los métodos de la API en la generación de estados mediante un verificador de modelos?
+\item \emph{RQ3}: ¿Cuál es el impacto de utilizar métodos Builders identificados en comparación con el uso de todos los métodos de la API en el contexto de verificación de software?
 \item \emph{RQ4}: ¿Puede realizarse eficientemente la generación exhaustiva utilizando métodos de la API (BEAPI)?
 \item\emph{RQ4}: ¿Cuál es el impacto de las optimizaciones propuestas en el rendimiento de BEG a partir de la API?
 \item\emph{RQ6}: ¿Puede BEAPI ayudar a encontrar discrepancias entre las especificaciones repOK y la capacidad de generación de objetos de la API?
@@ -33,7 +33,7 @@ En este capítulo, realizamos una evaluación experimental de estas técnicas co
 % \section{Algoritmos de Identificacion de metodos builders}
 
 \section{Evaluación Experimental en identificación de métodos builders}
-En esta sección, evaluamos experimentalmente nuestros enfoques presentados en el capítulo \ref{cap:builders}. Describiremos como es la eficiencia y efectividad de cada algoritmo con las funciones de valoración presentada en la sección \ref{sec:fitness}. Además, mostraremos el uso de estos métodos identificados por nuestras técnicas durante el uso de una herramienta de verificación.
+En esta sección, evaluamos experimentalmente nuestros enfoques presentados en el capítulo \ref{cap:builders}. Describiremos como es la eficiencia y efectividad de cada algoritmo con las funciones de valoración presentada en la sección \ref{sec:fitness}. Además, mostraremos el uso de estos métodos identificados por nuestras técnicas durante el uso de una herramienta de verificación de software.
 
 La evaluación se basa en un conjunto de implementaciones de estructuras de datos que se utilizan como referencia, incluyendo: \verb"NCL" de Apache Collections \cite{apache}; \verb"BinaryTree", \verb"BinomialHeap", \verb"FibonacciHeap" tomados de \cite{Visser:2006}; \verb"UnionFind", una implementación de conjuntos disjuntos tomada de JGrapht \cite{jgrapht}. También evaluamos nuestra técnica en componentes de proyectos de software reales, como \verb"Lits" de la implementación de Sat4j \cite{sat4j}, tomada de \cite{Loncaric:2018}, que consiste en un almacén de variables que controla cuándo se realizó la última suposición sobre el valor de una variable y si hay oyentes observando el estado de esa variable; \verb"Scheduler", una implementación de un planificador de procesos tomada de \cite{sir}; y estructuras de datos conocidas del paquete \verb"java.util" \footnote{https://docs.oracle.com/javase/8/docs/api/java/util/package-summary.html} como: \verb"TreeMap", \verb"TreeSet", \verb"HashMap", \verb"HashSet" y \verb"LinkedList". 
 
@@ -73,47 +73,57 @@ Los mejores valores que hemos obtenido para nuestros problemas son los siguiente
     \end{itemize}
 \end{itemize}
 
-Para realizar la evaluación de la técnica de identificacion de metodos \emph{builders}, cada resultado que se muestra en la siguiente sección corresponde a la ejecución del algoritmo 10 veces para cada función de valoración con los parámetros mencionados anteriormente. Luego de estas evaluaciones, se calcula el promedio de los datos obtenidos.
+Para realizar la evaluación de la técnica de identificación de métodos \emph{builders}, cada resultado que se muestra en la siguiente sección corresponde a la ejecución del algoritmo 5 veces para cada función de valoración con los parámetros mencionados anteriormente. Luego de estas evaluaciones, se calcula el promedio de los datos obtenidos.
+Vale aclarar que para la función de valoración que utiliza el generador exhaustivo, no hace falta ejecutarlo diferentes veces, debido a que este resultado es determinístico si se utiliza los mismos parámetros.
 
 
+Para implementar el algoritmo genético, utilizamos una biblioteca muy popular en Java llamada \emph{Jenetics}\footnote{https://jenetics.io/}. Esta biblioteca está diseñada específicamente para algoritmos evolutivos y nos proporcionó las herramientas necesarias para desarrollar nuestro enfoque genético.
+
+\emph{Jenetics} es una biblioteca robusta y versátil que ofrece una amplia gama de funcionalidades para la implementación de algoritmos genéticos. Nos permitió definir y manipular genes, cromosomas y poblaciones, así como utilizar operadores genéticos como selección, cruzamiento y mutación. Además, cuenta con un sólido conjunto de herramientas de optimización y técnicas de evolución que nos permitieron adaptar el algoritmo a nuestras necesidades específicas.
+Gracias a \emph{Jenetics}, pudimos implementar el algoritmo genético de manera eficiente y efectiva, lo que nos permitió explorar y encontrar subconjuntos óptimos de métodos \emph{builders} para las diferentes estructuras de datos en nuestro estudio. Además, \emph{Jenetics} es muy fácil de usar, con una documentación completa y una comunidad activa de usuarios que proporciona soporte y ayuda. 
 
 % necesarias para obtener las soluciones. Comparando los resultados obtenidos con la técnica evolutiva y la técnica greedy, pudimos evaluar la eficiencia de ambos enfoques y determinar cuál es más rápido en términos de tiempo de ejecución.
 \subsection{Eficiencia}
 La eficiencia de nuestros algoritmos es la cantidad de segundos que le lleva a cada uno de nuestros algoritmos con cada función de valoración para encontrar el subconjunto de métodos \emph{builders} suficientes. Para evaluar la eficiencia de nuestro algoritmo, llevamos a cabo experimentos utilizando conjuntos de datos de muestra y medimos el tiempo de promedio de las 5 ejecuciones necesarias para obtener las soluciones. Comparamos los resultados obtenidos con la técnica evolutiva (\emph{GA}), la técnica greedy (\emph{HC}) y la técnica de clase de equivalencia (\emph{SubSet}) para evaluar la eficiencia de ambos enfoques en función de la función de valoración utilizada. Los resultados se presentan en la Tabla \ref{tab:eficiencia}.
 
 
-Como se observa en la tabla, el algoritmo Hill Climbing (\emph{HC}) es más efectivo que el algoritmo genético (\emph{GA}) y el algoritmo de subconjuntos (\emph{SubSet}) para calcular los constructores de métodos en todos los casos de estudio considerados. El enfoque de Hill Climbing es razonablemente eficiente, tardando solo unos pocos minutos en el peor de los casos, mientras que el algoritmo genético puede tardar varios minutos en el peor de los casos. Esto se debe a que los algoritmos de Hill Climbing comienzan desde abajo hacia arriba, considerando menos métodos antes de considerar más métodos, a diferencia de los algoritmos genéticos, que generan sucesores mediante operadores de cruce y mutación. Esta estrategia favorece al algoritmo Hill Climbing para encontrar los métodos mínimos en tiempos más cortos. Cabe mencionar que en casos de estudio donde el algoritmo genético supera al Hill Climbing, se debe a que la clase bajo prueba tiene pocos métodos, lo que permite que los algoritmos evolutivos converjan más rápidamente que el algoritmo Hill Climbing.
+Como se observa en la tabla, el algoritmo Hill Climbing (\emph{HC}) es más efectivo que el algoritmo genético (\emph{GA}) y el algoritmo de subconjuntos (\emph{SubSet}) para calcular los constructores de métodos en todos los casos de estudio considerados. El enfoque de Hill Climbing es razonablemente eficiente, tardando solo 20 minutos en el peor de los casos (NCL, debido a la cantidad y complejidad de su API), mientras que el algoritmo genético puede tardar mas de una hora en el peor de los casos. Esto se debe a que los algoritmos de Hill Climbing comienzan desde abajo hacia arriba, considerando menos métodos antes de considerar más métodos, a diferencia de los algoritmos genéticos, que generan sucesores mediante operadores de cruce y mutación. Esta estrategia favorece al algoritmo Hill Climbing para encontrar los métodos mínimos en tiempos más cortos. Cabe mencionar que en casos de estudio donde el algoritmo genético supera al Hill Climbing, se debe a que la clase bajo prueba tiene pocos métodos, lo que permite que los algoritmos evolutivos converjan más rápidamente que el algoritmo Hill Climbing.
 
-En cuanto a nuestro último algoritmo, el de subconjuntos, suele tener una menor eficiencia en casos donde la API bajo prueba tiene una gran cantidad de métodos, como se observa en el caso de \emph{LinkedList}. Esto se debe a que el algoritmo de subconjuntos debe realizar muchas combinaciones de métodos, y cuanto mayor sea la variedad de valores de la función de valoración, más lento será su proceso de convergencia.
+En cuanto a nuestro último algoritmo, el de subconjuntos, suele tener una menor eficiencia en casos donde la API bajo prueba tiene una gran cantidad de métodos, como se observa en el caso de \emph{LinkedList} que es el caso que tiene más métodos. En este caso puede tardar hasta 3 horas con la fitness que utiliza cobertura de ramas como métrica. Esto se debe a que el algoritmo de subconjuntos debe realizar muchas combinaciones de métodos, y cuanto mayor sea la variedad de valores de la función de valoración, más lento será su proceso de convergencia.
 
-En relación a las funciones de valoración, observamos que la función de valoración basada en el generador exhaustivo (GE) logra finalizar la búsqueda de métodos \emph{builders} en menos tiempo en comparación con la función de valoración basada en la cobertura generada por la suite de pruebas modificada del Randoop (RC). Esto se aplica a todos los algoritmos implementados. La función de valoración GE converge antes en los algoritmos debido a que genera objetos hasta el alcance especificado (en este caso, 5 para todos los casos) y luego finaliza la ejecución del candidato actual para continuar con los siguientes. Esto permite una convergencia más rápida en comparación con la función de valoración basada en Randoop, que agota su presupuesto de tiempo para cada candidato ejecutado en el algoritmo. Es importante destacar que todos los algoritmos se ejecutan con 10 hilos simultáneamente, evaluando así 10 candidatos a la vez para cada algoritmo.
+En relación con las funciones de valoración, observamos que la función de valoración basada en el generador exhaustivo (GE) logra finalizar la búsqueda de métodos \emph{builders} en mucho menos tiempo en comparación con la función de valoración basada en la cobertura generada por la suite de pruebas modificada del Randoop (RC). Esto se aplica a todos los algoritmos implementados. La función de valoración GE converge antes en los algoritmos debido a que genera objetos hasta el alcance especificado (en este caso, 5 para todos los casos) y luego finaliza la ejecución del candidato actual para continuar con los siguientes. Todas tienen un \emph{timeout} de 30 segundos para el caso de pueda generar muchas estrucutras con el scope dado. Esto permite una convergencia más rápida en comparación con la función de valoración basada en Randoop, que agota su presupuesto de tiempo para cada candidato ejecutado en el algoritmo. Es importante destacar que todos los algoritmos se ejecutan con 10 hilos simultáneamente, evaluando así 10 candidatos a la vez para cada algoritmo.
 
-En conclusión, en términos de eficiencia de nuestro algoritmo, para los casos estudiados en esta tesis, es conveniente utilizar el algoritmo Hill Climbing con una función de valoración que cuente los objetos generados por el generador exhaustivo (GE).
+En conclusión, en términos de eficiencia de nuestro algoritmo, para los casos estudiados en esta tesis, es conveniente utilizar el algoritmo Hill Climbing con una función de valoración que cuente los objetos generados por el generador exhaustivo (\emph{GE}).
 
 \input{tables/eficienciaBuilders}
 
 \subsection{Efectividad}
+\cacho{Poner que beapi va hasta el scope o haste el tiempo dado. Pero casi siempre es scope porq es pequeno}
 
-La efectividad de nuestros algoritmos se basa en qué tan cerca están de encontrar el conjunto mínimo de métodos \emph{builders}. Es importante destacar que nuestros algoritmos siempre encuentran al menos un subconjunto de métodos \emph{builders} que es suficiente. Sin embargo, cuanto más mínimo sea este subconjunto, mejores resultados obtendremos al utilizarlo, por ejemplo, durante la generación de inputs para testing.
+La efectividad de nuestros algoritmos se basa en qué tan cerca están de encontrar el conjunto mínimo de métodos \emph{builders} para las diferentes estructuras de datos. Es importante tener en cuenta que siempre encontramos al menos un subconjunto de métodos \emph{builders} que es suficiente para su utilización. Sin embargo, cuanto más mínimo sea este subconjunto, mejores resultados obtendremos en términos de generación de inputs para testing.
 
-Para evaluar la efectividad de nuestro algoritmo, realizamos experimentos utilizando las estructuras de datos especificadas en la tabla \ref{tab:groundTruth}. Recordemos que el \emph{ground truth} proporciona la solución óptima con la cual podemos comparar los resultados obtenidos por los algoritmos. Hemos realizado 5 ejecuciones del algoritmo con la misma configuración de parámetros. Luego, verificamos cuántos métodos adicionales contiene el subconjunto hallado en comparación con los métodos mínimos para esa estructura de datos.
+Realizamos experimentos utilizando las estructuras de datos especificadas en nuestra primera sección de este capítulo. Evaluamos tres algoritmos: Hill Climbing (\emph{HC}), Subset (\emph{SubSet}). Para cada algoritmo, utilizamos dos funciones de valoración: una basada en el generador exhaustivo (\emph{BE}) y otra basada en la cobertura de ramas (\emph{RC}).
+Es importante destacar que la función de valoración que utiliza la test suite generada por Randoop, la cual hemos modificado para medir la cobertura de ramas, produce resultados variables según la semilla utilizada. La semilla tiene importancia en la aleatoriedad que posee Randoop, lo que puede afectar los resultados de la función de valoración.
 
-En el caso de NCL, el algoritmo GA encuentra un subconjunto de métodos \emph{builders} con 0 métodos adicionales en comparación con los métodos mínimos necesarios, lo cual indica que logra encontrar el conjunto mínimo. Por otro lado, el algoritmo HC encuentra un subconjunto con 1 método adicional, mientras que el algoritmo SubSet encuentra un subconjunto con 0.75 métodos adicionales en promedio. Estos resultados muestran que tanto HC como SubSet se acercan a encontrar el conjunto mínimo, pero no lo logran de manera exacta.
-
-En cuanto a UFInd, FHeap, BTree, BHeap y Lits (\cacho{Buscar caso que no encuentre los minimos.}), todos los algoritmos logran encontrar el conjunto mínimo de métodos \emph{builders}, ya que no se encuentran métodos adicionales en ninguno de los casos.
-
-Para las estructuras Sched y LinkedList, el algoritmo GA encuentra un subconjunto con 0.75 y 1.25 métodos adicionales, respectivamente, en comparación con los métodos mínimos. En el caso de HC, se encuentra 1 método adicional para Sched y no se encuentran métodos adicionales para LinkedList. Estos resultados indican que los algoritmos GA y HC se acercan a encontrar el conjunto mínimo para estas estructuras, pero aún hay margen de mejora.
-
-En resumen, los resultados muestran que nuestros algoritmos son efectivos en encontrar subconjuntos de métodos \emph{builders} que son suficientes para la generación de inputs en la mayoría de los casos. Sin embargo, hay variaciones en la efectividad dependiendo de la estructura de datos evaluada y el algoritmo utilizado.
-La tabla de efectividad (\ref{tab:efectividad}) nos permite evaluar la precisión y la capacidad de los algoritmos para encontrar soluciones cercanas al objetivo deseado.
-
-Es importante destacar que estos resultados son producto de la evaluación experimental y pueden variar según los conjuntos de datos utilizados y los parámetros de los algoritmos. Sin embargo, proporcionan una medida cuantitativa de la eficiencia y efectividad de nuestros enfoques.
+Para la estructura \emph{NCL}, el algoritmo \emph{HC} con la función de valoración que cuenta objectos de nuestro generador exhaustivo, \emph{BE} encuentra un subconjunto de métodos \emph{builders} que coincide con el conjunto mínimo, es decir, no agrega métodos adicionales. Sin embargo, al utilizar la función de valoración \emph{RC}, el algoritmo \emph{HC} encuentra un subconjunto con 0.6 métodos adicionales en promedio. Esto indica que en 3 de las 5 ejecuciones se agrega un método extra.
+En cuanto al algoritmo \emph{SubSet}, se comporta de manera similar al algoritmo \emph{HC} para ambas funciones de valoración.
+El algoritmo evolutivo, en las 5 ejecuciones, tiene encuentra un método de más con la función de valoración que utiliza cobertura, mientras que la función de valoración con el generador exhaustivo en 4 de las 5 ejecuciones encuentra un método de más. Esto se debe a que el algoritmo genético es muy sensible a los parámetros que se utiliza y puede depender de cada caso. Si se le da el tiempo, los parámetros y las evoluciones necesarias, este algoritmo siempre encontraría el mínimo sin ningún método extra. Así mismo con la función de valoración, tiene un método de más en todas las ejecuciones.
 
 
-% Es importante destacar que ambos enfoques encontraron el mismo conjunto de métodos \emph{builders}.
+En el caso de las estructuras \emph{UnionFind, FibonacciHeap, BTree, BinomialHeap y Scheduler}, todos los algoritmos logran encontrar el conjunto mínimo de métodos \emph{builders}, ya que no se encuentran métodos adicionales en ninguno de los casos. Esto tambien tiene que ver con que tienen menos cantidad de metodos en sus API y la complejidad de los mismos es diferente al resto de las clases que forman parte de nuestro benchmarks.
 
-% En resumen, mediante esta evaluación experimental, hemos analizado la eficiencia de nuestros algoritmos, comparado diferentes enfoques y evaluado su efectividad en función de los objetivos de aptitud. Estos resultados nos permiten tomar decisiones informadas sobre la elección de la técnica más adecuada para nuestro problema y comprender el desempeño de nuestros algoritmos en situaciones reales.
+En la estructura \emph{Lits}, la función de valoración basada en el generador exhaustivo siempre encuentra al menos un método adicional. Esto se debe a que el generador exhaustivo depende de los valores con los que están inicializados los arreglos en la API de List, lo que puede generar un método adicional en el conjunto mínimo de métodos \emph{builders}. 
+En la API de \emph{List}, la cual, es una biblioteca Java para resolver problemas booleanos de satisfacibilidad (SAT). Esta contiene una colección de arreglos que almacena los literales utilizados en un problema SAT. Proporciona métodos para manipular y acceder a literales, como agregar literales a la estructura, recuperar literales por sus índices, negar literales, etc. Nuestro generador exhaustivo depende de con que valores estén inicializados estos arreglos, y el scope que le hemos pasado. Es por esto que agrega un método para crear arreglos que no tiene posibilidad de hacerlo con los métodos builders y el scope que se le dio. Esto no quiere decir que sea builders el método que se agrega, solo que con el scope dado, no tiene posibilidad de crearlo con métodos alternativos. Si aumentamos el scope y modificamos la clase, nos encuentra siempre el subconjunto mínimo.
+En cambio, la función de valoración basada en la cobertura de ramas no depende del scope dado y nos encuentra siempre el mismo subconjunto de métodos que es el mínimo y suficiente.
 
+Para las estructuras de \emph{java.util}, el algoritmo evolutivo evaluado a través de la cobertura de ramas depende mucho del tiempo y los parámetros utilizados. Esto se debe a que estas estructuras tienen una mayor cantidad de métodos en su API, lo que hace más desafiante encontrar el conjunto mínimo de métodos \emph{builders}. Por un lado, la función de valoración basada en el generador exhaustivo encuentra el conjunto mínimo en la mayoría de las ejecuciones, con la excepción de HashSet, que agrega un método adicional que es un constructor de la clase que permite generar estructuras que no son posibles con los otros métodos hasta el scope dado.
+Por otro lado, la función de valoración de de randoop \cacho{TODO, puede no encontrar el suficiente porq satura coverage.}
+
+
+En resumen, la efectividad de nuestros algoritmos varía dependiendo de la estructura de datos y la función de valoración utilizada. Algunos algoritmos y funciones de valoración logran encontrar el conjunto mínimo de métodos \emph{builders}, mientras que otros pueden agregar métodos adicionales en ciertos casos.
+
+
+% La efectividad de nuestros algoritmos se basa en qué tan cerca están de encontrar el conjunto mínimo de métodos \emph{builders}. Es importante destacar que nuestros algoritmos siempre encuentran al menos un subconjunto de métodos \emph{builders} que es suficiente. Sin embargo, cuanto más mínimo sea este subconjunto, mejores resultados obtendremos al utilizarlo, por ejemplo, durante la generación de inputs para testing.
 
 \input{tables/eficaciaBuilders}
 
