--- a/tables/groundTruth.tex
+++ b/tables/groundTruth.tex
@@ -44,6 +44,7 @@
  & Lits() \\
  & getFromPool(int) \\
  & satisfies(int)  \\
+ & forgets(int) \\
  {\scriptsize \#API: 26} & setLevel(int,int)  \\
  & setReason(int)\\
 \hline
